buildscript {
    repositories {
        mavenCentral()
        maven {
            url = 'https://jitpack.io/'
        }
    }

    dependencies {
        classpath 'com.github.glassmc:kiln:a8c38d1cfe'
    }
}

plugins {
    id 'java'
}

apply plugin: 'kiln-main'

sourceCompatibility = targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'commons-io:commons-io:2.4'
    implementation 'com.github.jezza:toml:1.2-java-8'
    implementation 'net.bytebuddy:byte-buddy-agent:1.11.6'
    implementation 'org.ow2.asm:asm-tree:9.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
}

test {
    useJUnitPlatform()
}